--- a/src/components/home/hero/hero.scss
+++ b/src/components/home/hero/hero.scss
@@ -38,6 +38,8 @@ $text-color: #ecf0f1;
             font-size: 12px;
             font-weight: 500;
             padding: 5px;
+            transition: .5s;
+            display: inline-block;
         }
 
         &:nth-child(1) {
@@ -63,6 +65,7 @@ $text-color: #ecf0f1;
 
             .category {
                 background-color: rgb(53, 178, 34);
+
             }
         }
 
@@ -74,6 +77,7 @@ $text-color: #ecf0f1;
 
             .category {
                 background-color: rgb(178, 34, 156);
+
             }
         }
 
@@ -85,12 +89,13 @@ $text-color: #ecf0f1;
 
             .category {
                 background-color: rgb(34, 168, 178);
+
             }
         }
     }
 
     .box:hover {
-
+        cursor: pointer;
         overflow: hidden;
         transition: 0.5s;
         background: rgb(6, 7, 13);
@@ -102,7 +107,16 @@ $text-color: #ecf0f1;
             -webkit-filter: grayscale(100%);
             filter: grayscale(100%);
         }
+
+        .category {
+            display: inline-block;
+            transform: rotate(-3deg) scale(1.03);
+            transition: .5s;
+        }
+
     }
+
+
 
 
 
@@ -135,7 +149,7 @@ $text-color: #ecf0f1;
     .hero .container {
         display: grid;
         grid-template-columns: repeat(8, 1fr);
-        grid-template-rows: repeat(18, 6vh);
+        grid-template-rows: repeat(14, 4vh);
         grid-gap: 20px;
 
         h1 {
